--- a/Login/login.html
+++ b/Login/login.html
@@ -6,13 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Login</title>
+
+    <style>
+        .img-box {
+            background-color: #D9A5F6; /* Cor de fundo para o lado da imagem */
+            width: 45%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;  
+            overflow: hidden;
+            border-color: #9400D3;
+    
+    }
+    
+.img-box img {
+    max-width: 100%;
+    height: auto;
+    border-color: #9400D3;
+
+}
+    </style>
 </head>
 <body>
     <div class="box">
         <div class="form-box">
             <h2>Login</h2>
             <p> Não tem cadastro? <a href="../index.php">Cadastre-se</a> </p>
-            <form action="logar.php" method="post"> <!-- Envia o formulário para login_process.php -->
+            <form id="form-login" action="logar.php" method="post">
                 <div class="input-group">
                     <label for="email">E-mail</label>
                     <input type="email" id="email" name="email" placeholder="Digite o seu email" required>
@@ -24,14 +44,41 @@
                 </div>
 
                 <div class="input-group">
+                    <label for="confirmar-senha">Confirmar Senha</label>
+                    <input type="password" id="confirmar-senha" name="confirmar-senha" placeholder="Confirme sua senha" required>
+                </div>
+
+                <div class="input-group">
                     <button type="submit">Entrar</button>
-                    <a style="text-decoration: none;" href="login_adm.php">Entrar como administrador</a> </p>
+                    <a style="text-decoration: none;" href="login_adm.php">Entrar como administrador</a>
                 </div>
             </form>
         </div>
         <div class="img-box">
-            <img src="login.png" alt="Imagem de Cadastro">
+            <img class="img" src="login.png" alt="Imagem de Cadastro">
         </div>
     </div>
+
+    <script>
+        // Função para validar os campos de senha e confirmar senha
+        document.getElementById("form-login").addEventListener("submit", function(event) {
+            const email = document.getElementById("email").value;
+            const senha = document.getElementById("senha").value;
+            const confirmarSenha = document.getElementById("confirmar-senha").value;
+
+            // Verifica se os campos de senha e confirmar senha estão preenchidos
+            if (email === "" || senha === "" || confirmarSenha === "") {
+                alert("Por favor, preencha todos os campos.");
+                event.preventDefault(); // Impede o envio do formulário
+                return;
+            }
+
+            // Verifica se as senhas são iguais
+            if (senha !== confirmarSenha) {
+                alert("As senhas não coincidem. Por favor, confirme sua senha corretamente.");
+                event.preventDefault(); // Impede o envio do formulário
+            }
+        });
+    </script>
 </body>
 </html>
